# full_time_spond_sync

./: Cargo.toml
src/: full_time.rs  lib.rs  main.rs  spond.rs  team.rs  teams.json
