[package]
name = "full_time_spond_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
reqwest = { version = "0.11.22", features = ["json"] }
scraper = "0.18.1"
tokio = { version = "1.33.0", features = ["full"] }
