[package]
name = "full_time_spond_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.4"
clap = { version = "4.4.18", features = ["derive"] }
figment = { version = "0.10.19", features = ["json"] }
itertools = "0.14.0"
reqwest = { version = "0.11.22", features = ["json"] }
rust_decimal = { version = "1.33" }
rust_decimal_macros = "1.33.1"
scraper = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.33.0", features = ["full"] }
